--- a/_sources/tutorials/firefly/NEOWISE_light_curve_demo.ipynb
+++ b/_sources/tutorials/firefly/NEOWISE_light_curve_demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e5e1b6d5",
+   "id": "f5db59d1",
    "metadata": {},
    "source": [
     "# Finding Light Curves of Solar System Objects\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67bba636",
+   "id": "366a181c",
    "metadata": {},
    "source": [
     "## Introduction\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a2dabed",
+   "id": "3c791317",
    "metadata": {},
    "source": [
     "## Imports\n",
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "183f428f",
+   "id": "be6eb710",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bf05a59",
+   "id": "a1d11b5f",
    "metadata": {},
    "source": [
     "## Step 1\n",
@@ -72,9 +72,22 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "651dbd0e",
+   "id": "82985652",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "Open your web browser to <a href=\"https://irsa.ipac.caltech.edu/irsaviewer/?__wsch=MjAyNC0wOC0yMA\"\" target=\"_blank\">this link</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "url = 'https://irsa.ipac.caltech.edu/irsaviewer'\n",
     "# url='http://127.0.0.1:8080/firefly'  # if you have firefly server running locally (preferably through docker)\n",
@@ -85,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07fc7743",
+   "id": "6ef36303",
    "metadata": {},
    "source": [
     "You can re-initizialize the viewer to return to a clean slate with [`reinit_viewer`](https://caltech-ipac.github.io/firefly_client/api/firefly_client.FireflyClient.html#firefly_client.FireflyClient.reinit_viewer)."
@@ -94,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "83f43403",
+   "id": "fe7eef0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99d4d541",
+   "id": "474b06e8",
    "metadata": {},
    "source": [
     "## Step 2\n",
@@ -123,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a93c3289",
+   "id": "8f0e2e77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "84e1e627",
+   "id": "2f80092f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "164fc5c3",
+   "id": "ef3d994b",
    "metadata": {},
    "source": [
     "## Step 3\n",
@@ -164,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c3118fbe",
+   "id": "4cb5a603",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4449bcd1",
+   "id": "b9da5eb6",
    "metadata": {},
    "source": [
     "## Step 4\n",
@@ -188,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ef14e7be",
+   "id": "c3aeecca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a4655ad",
+   "id": "bbf5c4d9",
    "metadata": {},
    "source": [
     "Alternatively, we can queue a HiPS image using the method [`show_hips`](https://caltech-ipac.github.io/firefly_client/api/firefly_client.FireflyClient.html#firefly_client.FireflyClient.show_hips). However, this method requires target coordinates for the object you want to analyze."
@@ -208,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "742a8f02",
+   "id": "892ddd38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +237,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0377821b",
+   "id": "6c5b0964",
    "metadata": {},
    "source": [
     "## Summary\n",
@@ -242,7 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2088b1da",
+   "id": "60529fcb",
    "metadata": {},
    "source": [
     "***\n",
@@ -252,7 +265,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65f8c6d6",
+   "id": "fea2a0fd",
    "metadata": {},
    "source": [
     "**Author:** Eric Bratton II (IRSA Scientist) in conjunction with the IRSA Science Team<br>\n",
