Fix typo in path 56fa0e8eacee309ef75473434e79c77c0c5131d6

--- a/_sources/tutorials/firefly/NEOWISE_light_curve_demo.ipynb
+++ b/_sources/tutorials/firefly/NEOWISE_light_curve_demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3044526f",
+   "id": "d990b0eb",
    "metadata": {},
    "source": [
     "# Using Firefly visualization tools to understand the light curves of Solar System objects\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a3e4c5d",
+   "id": "a929290b",
    "metadata": {},
    "source": [
     "## Introduction\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "972f39f2",
+   "id": "9838e8eb",
    "metadata": {},
    "source": [
     "## Imports\n",
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "80c2b5e8",
+   "id": "77306bb0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d733b8bd",
+   "id": "7d62ab5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70e39fd3",
+   "id": "cd204daf",
    "metadata": {},
    "source": [
     "## Step 1\n",
@@ -83,13 +83,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "84f7e380",
+   "id": "ee3562b5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "Open your web browser to <a href=\"https://irsa.ipac.caltech.edu/irsaviewer/?__wsch=MjAyNC0xMi0xMQ\"\" target=\"_blank\">this link</a>"
+       "Open your web browser to <a href=\"https://irsa.ipac.caltech.edu/irsaviewer/?__wsch=MjAyNC0xMi0xOQ\"\" target=\"_blank\">this link</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bcbce2bb",
+   "id": "2ca2022a",
    "metadata": {},
    "source": [
     "You can re-initizialize the viewer to return to a clean state with [`reinit_viewer`](https://caltech-ipac.github.io/firefly_client/api/firefly_client.FireflyClient.html#firefly_client.FireflyClient.reinit_viewer)."
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a35305a3",
+   "id": "15449d09",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ebcfc36",
+   "id": "a1bc5989",
    "metadata": {},
    "source": [
     "## Step 2\n",
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "52dad325",
+   "id": "f6d3239a",
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "213d73ad",
+   "id": "38eeb4a9",
    "metadata": {},
    "source": [
     "Now, we can request the necessary data from the catalog and display the data as a table in the Firefly client, using the [`show_table`](https://caltech-ipac.github.io/firefly_client/api/firefly_client.FireflyClient.html#firefly_client.FireflyClient.show_table) method.\n",
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3de4251c",
+   "id": "4a2ca44e",
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "db338400",
+   "id": "6f6a09a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f959d4a",
+   "id": "8e959179",
    "metadata": {},
    "source": [
     "Note that along with the table, firefly also displays the coverage and chart associated with the table. It overlays colored squares for each row of the table onto a HiPS image, because the table contains recognizable celestial coordinates. It also creates a scatter plot of ra and dec from the table."
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8efced13",
+   "id": "887a669b",
    "metadata": {},
    "source": [
     "## Step 3\n",
@@ -231,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d4344bd1",
+   "id": "c522e662",
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "feea623d",
+   "id": "09cfa4ca",
    "metadata": {},
    "source": [
     "## Step 4\n",
@@ -262,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "07308771",
+   "id": "d5cdaaa4",
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35a06221",
+   "id": "7af2f056",
    "metadata": {},
    "source": [
     "## Summary\n",
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38ff9ad1",
+   "id": "0ec97cd7",
    "metadata": {},
    "source": [
     "***\n",
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aed75b3e",
+   "id": "f3b49c59",
    "metadata": {},
    "source": [
     "**Author:** Eric Bratton II (IRSA Scientist) in conjunction with the IRSA Science Team\n",
@@ -351,7 +351,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.11.11"
   },
   "source_map": [
    12,
