--- a/_sources/tutorials/parallelize/Parallelize_Convolution.ipynb
+++ b/_sources/tutorials/parallelize/Parallelize_Convolution.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c9064c3a",
+   "id": "b2f00ad7",
    "metadata": {},
    "source": [
     "# Parallelizing image convolution"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28749f45",
+   "id": "7a905406",
    "metadata": {},
    "source": [
     "## Learning Goals\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4994ae4d",
+   "id": "e4786a46",
    "metadata": {},
    "source": [
     "## Introduction\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "502ad0c2",
+   "id": "b6ceeec4",
    "metadata": {},
    "source": [
     "## Imports\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "022a961e",
+   "id": "fa4f9994",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,14 +65,14 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d09759ed",
+   "id": "b71e8048",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-12-11 23:33:39,152\tINFO util.py:154 -- Missing packages: ['ipywidgets']. Run `pip install -U ipywidgets`, then restart the notebook server for rich notebook output.\n"
+      "2024-12-19 23:26:48,634\tINFO util.py:154 -- Missing packages: ['ipywidgets']. Run `pip install -U ipywidgets`, then restart the notebook server for rich notebook output.\n"
      ]
     }
    ],
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "569502c5",
+   "id": "52e2c945",
    "metadata": {},
    "source": [
     "## Find the cpus available\n",
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "65658fea",
+   "id": "f4f38d62",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d4b5848",
+   "id": "69e7886f",
    "metadata": {},
    "source": [
     "## Process serially using a conventional loop"
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09808551",
+   "id": "b37fb65b",
    "metadata": {},
    "source": [
     "Use `scipy.signal` to convolve two 2-dimensional arrays and return a 5x5 downsampled result."
@@ -136,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f30658fc",
+   "id": "ba5759fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "596c6632",
+   "id": "aa8bc843",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5a08500",
+   "id": "e1149843",
    "metadata": {},
    "source": [
     "Process 100 iterations serially, then extrapolate to num_cpus*100"
@@ -165,14 +165,14 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e545e0fb",
+   "id": "64a8581b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(scaled) conventional duration for 400 iterations = 150.6 seconds\n"
+      "(scaled) conventional duration for 400 iterations = 148.3 seconds\n"
      ]
     }
    ],
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e87ff5d",
+   "id": "8397dfaf",
    "metadata": {},
    "source": [
     "## Process in parallel using Ray"
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d1b5211",
+   "id": "d75e9728",
    "metadata": {},
    "source": [
     "[Documentation for ray](https://docs.ray.io/en/latest/)"
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80bffa09",
+   "id": "eece511e",
    "metadata": {},
    "source": [
     "The warning raised by `ray.init` only affects shared object usage, which is not an issue for this tutorial. It may harm performance in other scenarios."
@@ -214,14 +214,14 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "67b8ce54",
+   "id": "b24000f7",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-12-11 23:34:18,885\tINFO worker.py:1821 -- Started a local Ray instance.\n"
+      "2024-12-19 23:27:27,807\tINFO worker.py:1821 -- Started a local Ray instance.\n"
      ]
     },
     {
@@ -246,7 +246,7 @@
        "        <table class=\"jp-RenderedHTMLCommon\" style=\"border-collapse: collapse;color: var(--jp-ui-font-color1);font-size: var(--jp-ui-font-size1);\">\n",
        "    <tr>\n",
        "        <td style=\"text-align: left\"><b>Python version:</b></td>\n",
-       "        <td style=\"text-align: left\"><b>3.11.10</b></td>\n",
+       "        <td style=\"text-align: left\"><b>3.11.11</b></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "        <td style=\"text-align: left\"><b>Ray version:</b></td>\n",
@@ -259,7 +259,7 @@
        "</div>\n"
       ],
       "text/plain": [
-       "RayContext(dashboard_url='', python_version='3.11.10', ray_version='2.40.0', ray_commit='22541c38dbef25286cd6d19f1c151bf4fd62f2ed')"
+       "RayContext(dashboard_url='', python_version='3.11.11', ray_version='2.40.0', ray_commit='22541c38dbef25286cd6d19f1c151bf4fd62f2ed')"
       ]
      },
      "execution_count": 7,
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dca5eb6b",
+   "id": "8395c3e8",
    "metadata": {},
    "source": [
     "Use `scipy.signal` to convolve two 2-dimensional arrays and return a 5x5 downsampled result. To use Ray, we decorate the function that is doing the work."
@@ -282,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "fb9b5c39",
+   "id": "44235025",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8f8bf39",
+   "id": "83a42735",
    "metadata": {},
    "source": [
     "In the following loop, `ray.put` places the image into shared memory. The call to `ray.get` retrieves the result."
@@ -302,14 +302,14 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "05dfc5f2",
+   "id": "33f0d9a8",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ray duration = 85.9, speedup = 1.75\n"
+      "Ray duration = 85.9, speedup = 1.73\n"
      ]
     }
    ],
@@ -327,7 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "c902ee89",
+   "id": "a3270bdf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33c2d61d",
+   "id": "773bcf93",
    "metadata": {},
    "source": [
     "## Process in parallel using multiprocessing"
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a38ad45",
+   "id": "298d6f92",
    "metadata": {},
    "source": [
     "[Documentation for multiprocessing](https://docs.python.org/3/library/multiprocessing.html)"
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fccbfc9a",
+   "id": "089ddcd3",
    "metadata": {},
    "source": [
     "Use `scipy.signal` to convolve two 2-dimensional arrays and return a 5x5 downsampled result. The call to the function has a slightly different form than that for the serial loop."
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "cb017b46",
+   "id": "6c060b6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4cf25cf",
+   "id": "b326bc8f",
    "metadata": {},
    "source": [
     "Use a multiprocessing pool with the number of cpus we found earlier."
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "7fa5ab05",
+   "id": "dc201c06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa0e5ea5",
+   "id": "499bdd33",
    "metadata": {},
    "source": [
     "Using `pool.map` is the closest analog in multiprocessing to the Ray API."
@@ -404,14 +404,14 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "de52769d",
+   "id": "4c85e937",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Multiprocessing duration = 135.8, speedup = 1.11\n"
+      "Multiprocessing duration = 140.9, speedup = 1.05\n"
      ]
     }
    ],
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a7b2e10",
+   "id": "e30525de",
    "metadata": {},
    "source": [
     "## Process using Dask"
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c611796",
+   "id": "44b13c5f",
    "metadata": {},
    "source": [
     "[Documentation for Dask](https://www.dask.org/get-started)"
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2c9166a",
+   "id": "fb91d5a6",
    "metadata": {},
    "source": [
     "Define a Dask distributed client with number of workers set to the number of cpus we found earlier, and with one thread per worker."
@@ -452,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "353f848c",
+   "id": "ef90135c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,14 +462,14 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "30cc64f1",
+   "id": "5091da21",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<Client: 'tcp://127.0.0.1:33821' processes=4 threads=4, memory=15.61 GiB>\n"
+      "<Client: 'tcp://127.0.0.1:37745' processes=4 threads=4, memory=15.61 GiB>\n"
      ]
     }
    ],
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f006b5ec",
+   "id": "932d44d4",
    "metadata": {},
    "source": [
     "Dask recommends scattering the large inputs across the workers, though this makes little difference in execution time."
@@ -488,14 +488,14 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "65309ad3",
+   "id": "01a18798",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dask duration = 105.8, speedup = 1.42\n"
+      "Dask duration = 105.4, speedup = 1.41\n"
      ]
     }
    ],
@@ -514,14 +514,15 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "d2d67044",
+   "id": "4658123a",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-12-11 23:39:50,843 - distributed.worker.state_machine - WARNING - Async instruction for <Task cancelled name=\"execute('fmp-c842fc29f39fc50c112fabee38096490')\" coro=<Worker.execute() done, defined at /home/runner/work/irsa-tutorials/irsa-tutorials/.tox/py311-buildhtml/lib/python3.11/site-packages/distributed/worker_state_machine.py:3606>> ended with CancelledError\n"
+      "2024-12-19 23:33:04,055 - distributed.worker.state_machine - WARNING - Async instruction for <Task cancelled name=\"execute('fmp-883490741d48b44e5e25f23d9ecc8685')\" coro=<Worker.execute() done, defined at /home/runner/work/irsa-tutorials/irsa-tutorials/.tox/py311-buildhtml/lib/python3.11/site-packages/distributed/worker_state_machine.py:3606>> ended with CancelledError\n",
+      "2024-12-19 23:33:04,111 - distributed.worker.state_machine - WARNING - Async instruction for <Task cancelled name=\"execute('fmp-a91a35f7ad251d0e4be6ef59a3f0cce2')\" coro=<Worker.execute() done, defined at /home/runner/work/irsa-tutorials/irsa-tutorials/.tox/py311-buildhtml/lib/python3.11/site-packages/distributed/worker_state_machine.py:3606>> ended with CancelledError\n"
      ]
     }
    ],
@@ -531,7 +532,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "636efef9",
+   "id": "c93c6797",
    "metadata": {},
    "source": [
     "## Conclusions"
@@ -539,7 +540,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9647c195",
+   "id": "fe717453",
    "metadata": {},
    "source": [
     "* Ray is the most effective at speeding up the convolution workload by fully utilizing all available processes\n",
@@ -549,7 +550,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe6ea433",
+   "id": "ad1249a8",
    "metadata": {},
    "source": [
     "***\n",
@@ -573,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b9ddd96",
+   "id": "0ac37a4d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -603,7 +604,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.11.11"
   },
   "source_map": [
    12,
